--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     .my-image {
         width: 200px;
         height: 500px;
+		border-radius: 50%;
 		font-family: "Times New Roman", Times, serif;
     }
 </style>
@@ -84,7 +85,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/me.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/me.png" alt="" /></span>
 							<h1 id="title">Rohan Singh</h1>
 							<p>Data Analyst</p>
 						</div>
@@ -128,7 +129,7 @@
 
 							<header>
 								<h2 class="bigger-bold-text ">Introduction<br /></h2>
-								<p class= "big-text">Hi, I'm Rohan Singh, in my portfolio, you'll find examples of how I use data analysis to drive decision-making and solve business problems.
+								<p class= "big-text">Hi, I'm Rohan Singh, in my portfolio, you'll find how I use data analysis to drive decision-making and solve business problems.
 									From data visualization to machine learning models, I've worked with a range of tools and techniques to extract insights from complex data sets.
 									I'm passionate about using data to tell stories and uncover hidden patterns that help businesses succeed.</p>
 							</header>
@@ -206,7 +207,7 @@
 								<h2 class="bigger-bold-text">About Me</h2>
 							</header>
 
-							<a href="#" class="my-image"><img src="images/me.jpg" width="500" height="480" /></a>
+							<a href="#" class="my-image"><img src="images/me.png" width="460" height="480"/></a>
 
 							<p class="big-text">Graduated from Georgian College with a degree in Big Data Analytics, I possess a range of skills 
 								that make me a capable data analyst. Specifically, I am proficient in Python, Power BI, SQL, Tableau, and Excel. 
