--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
 					<section class="split contact">
 						<section class="alt">
 							<h2  class="bigger-text">Location</h2>
-							<p class="smaller-bold">Barrie, Ontario</p>
+							<p class="smaller-bold">Punjab, India</p>
 						</section>
 						<section>
 							<h2  class="bigger-text">Phone</h2>
-							<p class="smaller-bold">(548)-333-3770</p>
+							<p class="smaller-bold">+91-8872432745</p>
 						</section>
 						<section>
 							<h2  class="bigger-text">Email</h2>
