--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/ron-1352/Dynamic-Stock-Visualization-PowerBI" class="image fit"><img src="images/PowerBI.png" alt="" /></a>
+										<a href="https://my.novypro.com/rohan-singh-1" class="image fit"><img src="images/PowerBI.png" alt="" /></a>
 										<header>
-											<p class="smaller-bold-text"><a href="https://github.com/ron-1352/Dynamic-Stock-Visualization-PowerBI">Dynamic Stock visualization<br /></a></p>
-											<p class="smaller-text">Using an Yahoo finance stock link in Power BI and changing the stock visualization by only changing the stock in excel spreadsheet.</p>
+											<p class="smaller-bold-text"><a href="https://my.novypro.com/rohan-singh-1">Power BI Projects<br /></a></p>
+											<p class="smaller-text">Creating dynamic dashboards using Microsoft Power Bi by cleaning data in excel and python using libraries.</p>
 										</header>
 									</article>
 								</div>
