--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 					<!-- Social Icons -->
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/rohan-singh-1ba117139/" class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
+						<li><a href="www.linkedin.com/in/rohan-singh-1352ron64/" class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
 						<li><a href="https://github.com/ron-1352" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="https://twitter.com/Rohan1352m" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 					</ul>
@@ -123,7 +123,7 @@
 						<div class="container">
 							<ul class="icons alt">
 								<li><a href="https://twitter.com/Rohan1352m" class="icon brands alt fa-twitter"><span class="label" >Twitter</span></a></li>
-								<li><a href="https://www.linkedin.com/in/rohan-singh-1ba117139/" class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
+								<li><a href="www.linkedin.com/in/rohan-singh-1352ron64/" class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
 								<li><a href="https://github.com/ron-1352" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 
@@ -240,7 +240,7 @@
 							<h2  class="bigger-text">Social</h2>
 							<ul class="icons alt">
 								<li><a href="https://twitter.com/Rohan1352m" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.linkedin.com/in/rohan-singh-1ba117139/" class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
+								<li><a href="www.linkedin.com/in/rohan-singh-1352ron64/" class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
 								<li><a href="https://github.com/ron-1352" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
