--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://my.novypro.com/rohan-singh-1" class="image fit"><img src="images/PowerBI.png" alt="" /></a>
+										<a href="https://my.novypro.com/rohan-singh-1" class="image fit"><img src="images/powerbi.png" alt="" /></a>
 										<header>
 											<p class="smaller-bold-text"><a href="https://my.novypro.com/rohan-singh-1">Power BI Projects<br /></a></p>
 											<p class="smaller-text">Creating dynamic dashboards using Microsoft Power Bi by cleaning data in excel and python using libraries.</p>
