--- a/index.html
+++ b/index.html
@@ -106,9 +106,8 @@
 
 					<!-- Social Icons -->
 					<ul class="icons">
-						<li><a href="www.linkedin.com/in/rohan-singh-1352ron64/" class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/rohan-singh-1352ron64?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
 						<li><a href="https://github.com/ron-1352" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="https://twitter.com/Rohan1352m" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 					</ul>
 
 				</div>
@@ -122,8 +121,7 @@
 					<section id="top" class="one dark cover">
 						<div class="container">
 							<ul class="icons alt">
-								<li><a href="https://twitter.com/Rohan1352m" class="icon brands alt fa-twitter"><span class="label" >Twitter</span></a></li>
-								<li><a href="www.linkedin.com/in/rohan-singh-1352ron64/" class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/rohan-singh-1352ron64?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
 								<li><a href="https://github.com/ron-1352" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 
@@ -239,8 +237,7 @@
 						<section>
 							<h2  class="bigger-text">Social</h2>
 							<ul class="icons alt">
-								<li><a href="https://twitter.com/Rohan1352m" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="www.linkedin.com/in/rohan-singh-1352ron64/" class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/rohan-singh-1352ron64?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
 								<li><a href="https://github.com/ron-1352" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
