--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://my.novypro.com/rohan-singh-1" class="image fit"><img src="images/powerbi.png" alt="" /></a>
+										<a href="https://my.novypro.com/rohan-singh-1" class="image fit"><img src="images/powerbi.webp" alt="" /></a>
 										<header>
 											<p class="smaller-bold-text"><a href="https://my.novypro.com/rohan-singh-1">Power BI Projects<br /></a></p>
 											<p class="smaller-text">Creating dynamic dashboards using Microsoft Power Bi by cleaning data in excel and python using libraries.</p>
@@ -224,11 +224,11 @@
 					<section class="split contact">
 						<section class="alt">
 							<h2  class="bigger-text">Location</h2>
-							<p class="smaller-bold">Cambridge, ON</p>
+							<p class="smaller-bold">Punjab, IN</p>
 						</section>
 						<section>
 							<h2  class="bigger-text">Phone</h2>
-							<p class="smaller-bold">+1-548-333-3770</p>
+							<p class="smaller-bold">+919781842335</p>
 						</section>
 						<section>
 							<h2  class="bigger-text">Email</h2>
